Choose a VALID ID TYPE

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1653,7 +1653,7 @@
     <string name="P244">Step 1</string>
     <string name="P245">Step 2</string>
     <string name="P246">Step 3</string>
-    <string name="P247">Choose A Valid ID Type</string>
+    <string name="P247">Choose a VALID ID TYPE</string>
     <string name="P248">Upload ID Photo</string>
     <string name="P249">Confirm Information</string>
     <string name="P250">Choose Recommend IDs for Quick Verification within 3 minutes</string>
