优化首次充值和每日充值显示

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1599,5 +1599,7 @@
     <string name="P331">Ikinalulungkot naming ipaalam sa iyo na tinanggihan ang iyong pagsusumite sa KYC. Mangyaring muling isumite ang mga wastong dokumento upang makumpleto ang proseso. salamat po.</string>
     <string name="P332">Rason</string>
     <string name="P330">Isumite muli</string>
+    <string name="P445">Araw-araw na bonus</string>
+    <string name="P446">Bonus sa Unang Deposit</string>
 </resources>
 
