--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1602,5 +1602,6 @@
     <string name="P447">Para sa seguridad ng iyong account at mga pondo, kinakailangan mong kumpletuhin ang mga sumusunod</string>
     <string name="P448">I-set up</string>
     <string name="P242">KYC Verify</string>
+    <string name="D038">Nakumpleto</string>
 </resources>
 
