--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1631,4 +1631,5 @@
     <string name="P447">Để đảm bảo an toàn cho tài khoản và tiền của bạn, bạn cần hoàn thành các bước sau</string>
     <string name="P448">Thiết lập</string>
     <string name="P242">Xác minh KYC</string>
+    <string name="D038">Hoàn thành</string>
 </resources>
