--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1686,4 +1686,5 @@
     <string name="P447">为了您的账户和资金的安全，您需要完成以下步骤</string>
     <string name="P448">" 设置"</string>
     <string name="P242">实名认证</string>
+    <string name="D038">已完成</string>
 </resources>
