--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1616,5 +1616,5 @@
     <string name="KYC055">Mẹo</string>
     <string name="P337">Đã bắt đầu trận, không thể đặt cược</string>
     <string name="J748">Ưu đãi</string>
-    <string name="P338">Còn nhiều trận đấu đặc sắc tại OKSport New</string>
+    <string name="P338">Còn nhiều trận đấu đặc sắc tại OKPlay</string>
 </resources>
