--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1671,5 +1671,5 @@
     <string name="KYC055">提示</string>
     <string name="P337">已开赛，无法投注</string>
     <string name="J748">优惠活动</string>
-    <string name="P338">更多精彩赛事尽在OKSport New</string>
+    <string name="P338">更多精彩赛事尽在OKPlay</string>
 </resources>
