--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1587,6 +1587,6 @@
     <string name="KYC055">Pahiwatig</string>
     <string name="P337">Nagsimula na ang laro, walang pwedeng tumaya</string>
     <string name="J748">Promotion</string>
-    <string name="P338">Tuklasin ang Higit pang Eksklusibong Laban Sa OKSport New</string>
+    <string name="P338">Tuklasin ang Higit pang Eksklusibong Laban Sa OKPlay</string>
 </resources>
 
