--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1744,5 +1744,5 @@
     <string name="KYC055">Tips</string>
     <string name="P337">The game has started, no bets can be made</string>
     <string name="J748">Promo</string>
-    <string name="P338">Discover More Exclusive Match In OKSport New</string>
+    <string name="P338">Discover More Exclusive Match In OKPlay</string>
 </resources>
