--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1759,5 +1759,5 @@
     <string name="P447">For the security of your account and funds, you are required to complete the following</string>
     <string name="P448">Set up</string>
     <string name="P242">KYC Verify</string>
-    <string name="D038">DONE</string>
+    <string name="D038">Done</string>
 </resources>
