--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1633,4 +1633,5 @@
     <string name="P359">Nhấp vào tỷ số đã chọn để xóa</string>
     <string name="P360">%s người đang xem</string>
     <string name="P361">Đã bán %s lượt</string>
+    <string name="str_ok_i_got_it">Tôi biết rồi</string>
 </resources>
