--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1600,7 +1600,7 @@
     <string name="P355">Pumili ka ng iskor na hindi mo pa natataya. Maki-clear ang mga iskor kapag umalis ka sa page na ito.</string>
     <string name="P356">Alam ko na, hindi ko na ipapaalala sa iyo</string>
     <string name="P357">Tumaya ngayon</string>
-    <string name="P358">Kumpirmahin na umalis</string>
+    <string name="P358">Confirm to leave</string>
     <string name="P359">I-click ang napiling iskor para tanggalin</string>
     <string name="P360">%s tao ang tumitingin sa card</string>
     <string name="P361">Nabenta ang %s na kopya</string>
