增加沙巴未开启翻译

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1672,4 +1672,5 @@
     <string name="P337">已开赛，无法投注</string>
     <string name="J748">优惠活动</string>
     <string name="P338">更多精彩赛事尽在OKPlay</string>
+    <string name="shaba_no_open">沙巴体育未开启</string>
 </resources>
