--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1588,5 +1588,6 @@
     <string name="P337">Nagsimula na ang laro, walang pwedeng tumaya</string>
     <string name="J748">Promotion</string>
     <string name="P338">Tuklasin ang Higit pang Eksklusibong Laban Sa OKPlay</string>
+    <string name="shaba_no_open">Ang OKPlay ay hindi bukas</string>
 </resources>
 
