--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1617,4 +1617,5 @@
     <string name="P337">Đã bắt đầu trận, không thể đặt cược</string>
     <string name="J748">Ưu đãi</string>
     <string name="P338">Còn nhiều trận đấu đặc sắc tại OKPlay</string>
+    <string name="shaba_no_open">Trò OKPlay ba chưa mở</string>
 </resources>
