--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1745,4 +1745,5 @@
     <string name="P337">The game has started, no bets can be made</string>
     <string name="J748">Promo</string>
     <string name="P338">Discover More Exclusive Match In OKPlay</string>
+    <string name="shaba_no_open">The OKPlay is not open</string>
 </resources>
