用户等级体系优化

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1676,6 +1676,11 @@
     <string name="P441">Susunod na lebel</string>
     <string name="P442">Relegation</string>
     <string name="P443">Ang halaga ng paglago ay binabayaran sa 15:50 araw-araw</string>
+    <string name="P448">I-set up</string>
+    <string name="A017">Pahiwatig</string>
+    <string name="P450">Kasalukuyang piniling petsa</string>
+    <string name="P451">Walang pagbabagong papayagan pagkatapos ng kumpirmasyon.</string>
+    <string name="LT002">Bumalik</string>
 
 </resources>
 
