设置提款密码需要先判断，是否设置了登录密码

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1603,5 +1603,6 @@
     <string name="P448">I-set up</string>
     <string name="P242">KYC Verify</string>
     <string name="D038">Nakumpleto</string>
+    <string name="N645">Mag-set muna ng log in password</string>
 </resources>
 
