--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1603,5 +1603,6 @@
     <string name="birthofdate">Birthday</string>
     <string name="P445">Araw-araw na bonus</string>
     <string name="P446">Bonus sa Unang Deposit</string>
+    <string name="P452">Perya</string>
 </resources>
 
