--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1687,4 +1687,5 @@
     <string name="P330">重新提交</string>
     <string name="P445">每日奖励</string>
     <string name="P446">首充奖励</string>
+    <string name="P452">游乐场</string>
 </resources>
