--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1760,4 +1760,5 @@
     <string name="birthofdate">Date of Birth</string>
     <string name="P445">Daily Bonus</string>
     <string name="P446">First Deposit Bonus</string>
+    <string name="P452">Perya</string>
 </resources>
