--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1632,4 +1632,5 @@
     <string name="birthofdate">Ngày sinh nhật</string>
     <string name="P445">Thưởng hằng ngày</string>
     <string name="P446">Thưởng nạp lần đầu</string>
+    <string name="P452">Khu vui chơi</string>
 </resources>
