--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1759,7 +1759,7 @@
     <string name="P441">下一级</string>
     <string name="P442">保级</string>
     <string name="P443">成长值于每日15:50进行结算</string>
-    <string name="P448">" 设置"</string>
+    <string name="P448">设置</string>
     <string name="A017">提示</string>
     <string name="P450">当前所选日期</string>
     <string name="P451">确认后将不可修改</string>
