保级成长值未负数时，设置为0

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1681,6 +1681,8 @@
     <string name="P450">Kasalukuyang piniling petsa</string>
     <string name="P451">Walang pagbabagong papayagan pagkatapos ng kumpirmasyon.</string>
     <string name="LT002">Bumalik</string>
+    <string name="P453">Matagumpay ang aplikasyon</string>
+    <string name="P454">Matagumpay na natanggap</string>
 
 </resources>
 
