领取成功提示

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1710,5 +1710,6 @@
     <string name="LT002">Quay lại</string>
     <string name="P453">Yêu cầu thành công</string>
     <string name="P454">Nhận thành công</string>
+    <string name="J533">cài đặt thành công</string>
 
 </resources>
