--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1766,4 +1766,5 @@
     <string name="LT002">返回</string>
     <string name="P453">申请成功</string>
     <string name="P454">领取成功</string>
+    <string name="J533">设置成功</string>
 </resources>
