--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1840,5 +1840,6 @@
     <string name="LT002">Return</string>
     <string name="P453">Application successful</string>
     <string name="P454">Received successfully</string>
+    <string name="J533">Setting successful</string>
 
 </resources>
