--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1683,6 +1683,7 @@
     <string name="LT002">Bumalik</string>
     <string name="P453">Matagumpay ang aplikasyon</string>
     <string name="P454">Matagumpay na natanggap</string>
+    <string name="J533">Successfully set</string>
 
 </resources>
 
