处理最高等级max显示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1841,5 +1841,6 @@
     <string name="P453">Application successful</string>
     <string name="P454">Received successfully</string>
     <string name="J533">Setting successful</string>
+    <string name="max">Max</string>
 
 </resources>
