--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1136,9 +1136,9 @@
     <string name="N628">Mã tổng đơn giao dịch</string>
     <string name="N646">Tiền vào TK</string>
     <string name="N647">Số tiền của đơn</string>
-    <string name="N653">Chờ chuyển tiền</string>
+    <string name="N653">Đang chờ</string>
     <string name="J630">Số đơn hàng</string>
-    <string name="N618">Mã giao dịch phụ</string>
+    <string name="N619">Mã giao dịch phụ</string>
     <string name="J801">1 X 2 &amp; Trên</string>
     <string name="J802">1 X 2 &amp; Dưới</string>
     <string name="J803">1 X 2 &amp; Hai Đội Ghi Bàn-Có</string>
