--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1804,4 +1804,5 @@
     <string name="P453">申请成功</string>
     <string name="P454">领取成功</string>
     <string name="J533">设置成功</string>
+    <string name="M311">规则与条款</string>
 </resources>
