--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1879,5 +1879,6 @@
     <string name="P454">Received successfully</string>
     <string name="J533">Setting successful</string>
     <string name="max">Max</string>
+    <string name="M311">Terms &amp; Conditions</string>
 
 </resources>
