--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1783,16 +1783,16 @@
     <string name="P242">KYC Verify</string>
     <string name="D038">Done</string>
     <string name="N645">Please set a login password first</string>
-    <string name="P362">Growth value</string>
+    <string name="P362">Upgrade Level</string>
     <string name="P363">Upgrade bonus</string>
     <string name="P364">Weekly turnover bonus</string>
     <string name="P365">Birthday bonus</string>
     <string name="P366">Exclusive bonus</string>
-    <string name="P367">upgrade to next level</string>
+    <string name="P367" translatable="false">upgrade to next level</string>
     <string name="P368">Activated benefits</string>
     <string name="P369">There are no benefits at the current level.Please continue betting to gain growth points to upgrade your level</string>
     <string name="P370">Unactivated benefits</string>
-    <string name="P371">VIP privileges</string>
+    <string name="P371">VIP Rewards</string>
     <string name="P372">VIP details</string>
     <string name="P373">Receive</string>
     <string name="P374">Received</string>
@@ -1824,11 +1824,11 @@
     <string name="P394">Relegation details</string>
     <string name="P395">Relegation experience</string>
     <string name="P396">Growth value can complete relegation</string>
-    <string name="P397">Congratulations on completing the relegation task</string>
-    <string name="P398">Relegation rules</string>
-    <string name="P399">Starting from the 1st of the next month after a member\'s \"VIP level change\", members must complete the valid betting requirements of the corresponding level before they can continue to maintain their level for 30 days.</string>
-    <string name="P400">When relegation fails, the VIP level will be dropped to the previous level and a part of the growth value will be retained.</string>
-    <string name="P401">Only the VIP growth value obtained within 30 days will be assessed for relegation. The assessment time for relegation will be reset when upgrading.</string>
+    <string name="P397">Congratulations on upgrading your level!</string>
+    <string name="P398">Maintaining VIP Level</string>
+    <string name="P399">Starting from the 1st of the month after a member\'s VIP level changes, they must meet the betting requirements for their new level to maintain it for 30 days. </string>
+    <string name="P400">If they don\'t, their VIP level will drop to the previous level, but part of the upgraded level will be retained.</string>
+    <string name="P401">If you\'ve recently moved up to a VIP level in the past month, only that level will count for any potential downgrades. If you upgrade again, the 30-day countdown starts over.</string>
     <string name="P402">Dedicated customer service</string>
     <string name="P403">Your exclusive customer service is available 24/7 to answer your questions and meet all reasonable needs.</string>
     <string name="P404">Fast withdrawals</string>
@@ -1867,10 +1867,10 @@
     <string name="P437">7x24 hours customer service to serve you</string>
     <string name="P438">Exclusive VIP channel, payment will be received in seconds</string>
     <string name="P439">Highest</string>
-    <string name="P440">Relegation will be calculated monthly</string>
+    <string name="P440">Maintaining VIP Points calculated montly</string>
     <string name="P441">Next level</string>
-    <string name="P442">Relegation</string>
-    <string name="P443">Growth value is settled at 15:50 every day</string>
+    <string name="P442">Rules</string>
+    <string name="P443">The Upgraded VIP level is settled at 3:50 PM every day</string>
     <string name="A017">Tips</string>
     <string name="P450">Current selected date</string>
     <string name="P451">No modification will be allowed after confirmation.</string>
