投注站内容显示调整

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1722,6 +1722,8 @@
     <string name="P454">Matagumpay na natanggap</string>
     <string name="J533">Successfully set</string>
     <string name="M311">Termino at Kundisyon</string>
+    <string name="P457">Betting Station</string>
+    <string name="P458">Lokasyon</string>
 
 </resources>
 
