--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1750,5 +1750,7 @@
     <string name="P454">Nhận thành công</string>
     <string name="J533">cài đặt thành công</string>
     <string name="M311">Điều Khoản &amp; Điều Kiện</string>
+    <string name="P457">Trạm cược</string>
+    <string name="P458">Vị trí</string>
 
 </resources>
