--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1805,4 +1805,6 @@
     <string name="P454">领取成功</string>
     <string name="J533">设置成功</string>
     <string name="M311">规则与条款</string>
+    <string name="P457">投注站</string>
+    <string name="P458">位置</string>
 </resources>
