--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1880,5 +1880,7 @@
     <string name="J533">Setting successful</string>
     <string name="max">Max</string>
     <string name="M311">Terms &amp; Conditions</string>
+    <string name="P457">Betting Station</string>
+    <string name="P458">Location</string>
 
 </resources>
