--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1741,7 +1741,7 @@
     <string name="P440">Việc trụ hạng sẽ được tính hàng tháng</string>
     <string name="P441">Cấp bậc tiếp theo</string>
     <string name="P442">Trụ hạng</string>
-    <string name="P443">Tích luỹ thăng cấp kết toán vào 15:50 mỗi ngày</string>
+    <string name="P443">Tích luỹ thăng cấp kết toán vào 3:50 PM mỗi ngày</string>
     <string name="A017">Nhắc nhở</string>
     <string name="P450">Ngày tháng đã chọn hiện tại</string>
     <string name="P451">Sau khi xác nhận không thể thay đổi</string>
