--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1713,7 +1713,7 @@
     <string name="P440">Kakalkulahin buwan-buwan ang relegation</string>
     <string name="P441">Susunod na lebel</string>
     <string name="P442">Rules</string>
-    <string name="P443">Ang halaga ng paglago ay binabayaran sa 15:50 araw-araw</string>
+    <string name="P443">Ang halaga ng paglago ay binabayaran sa 3:50 PM araw-araw</string>
     <string name="A017">Pahiwatig</string>
     <string name="P450">Kasalukuyang piniling petsa</string>
     <string name="P451">Walang pagbabagong papayagan pagkatapos ng kumpirmasyon.</string>
