--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1724,6 +1724,9 @@
     <string name="M311">Termino at Kundisyon</string>
     <string name="P457">Betting Station</string>
     <string name="P458">Lokasyon</string>
+    <string name="P459">GRANDER laro, higit pang mga serbisyo, at higit pang mga lokasyon!</string>
+    <string name="P460">Oras ng pagbubukas</string>
+    <string name="P461">suriin ang mapa</string>
 
 </resources>
 
