--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1752,5 +1752,8 @@
     <string name="M311">Điều Khoản &amp; Điều Kiện</string>
     <string name="P457">Trạm cược</string>
     <string name="P458">Vị trí</string>
+    <string name="P459">Game GRANDER, cung cấp nhiều dịch vụ hơn và địa điểm mở rộng hơn!</string>
+    <string name="P460">Giờ mở cửa</string>
+    <string name="P461">Xem bản đồ</string>
 
 </resources>
