--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1807,4 +1807,7 @@
     <string name="M311">规则与条款</string>
     <string name="P457">投注站</string>
     <string name="P458">位置</string>
+    <string name="P459">GRANDER 游戏、更多的服务以及更广阔的地点！</string>
+    <string name="P460">开放时间</string>
+    <string name="P461">查看地图</string>
 </resources>
