--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1882,5 +1882,8 @@
     <string name="M311">Terms &amp; Conditions</string>
     <string name="P457">Betting Station</string>
     <string name="P458">Location</string>
+    <string name="P459">Grander Gaming, More Service Offering, and Expanded Location!</string>
+    <string name="P460">Opening Hour</string>
+    <string name="P461">View Map</string>
 
 </resources>
