--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1805,4 +1805,5 @@
     <string name="P454">领取成功</string>
     <string name="J533">设置成功</string>
     <string name="M311">规则与条款</string>
+    <string name="P462">邀请好友</string>
 </resources>
