--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1880,5 +1880,5 @@
     <string name="J533">Setting successful</string>
     <string name="max">Max</string>
     <string name="M311">Terms &amp; Conditions</string>
-    <string name="referral_friends">Referral Friends</string>
+    <string name="P462">Referral Friends</string>
 </resources>
