--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1727,6 +1727,7 @@
     <string name="P459">GRANDER laro, higit pang mga serbisyo, at higit pang mga lokasyon!</string>
     <string name="P460">Oras ng pagbubukas</string>
     <string name="P461">suriin ang mapa</string>
+    <string name="N498">Cellphone</string>
 
 </resources>
 
