--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1755,5 +1755,6 @@
     <string name="P459">Game GRANDER, cung cấp nhiều dịch vụ hơn và địa điểm mở rộng hơn!</string>
     <string name="P460">Giờ mở cửa</string>
     <string name="P461">Xem bản đồ</string>
+    <string name="N498">SĐT</string>
 
 </resources>
