--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1810,4 +1810,5 @@
     <string name="P459">GRANDER 游戏、更多的服务以及更广阔的地点！</string>
     <string name="P460">开放时间</string>
     <string name="P461">查看地图</string>
+    <string name="N498">手机</string>
 </resources>
