--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1885,5 +1885,6 @@
     <string name="P459">Grander Gaming, More Service Offering, and Expanded Location!</string>
     <string name="P460">Opening Hour</string>
     <string name="P461">View Map</string>
+    <string name="N498">Mobile</string>
 
 </resources>
