增加未安装提示

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1723,6 +1723,7 @@
     <string name="J533">Successfully set</string>
     <string name="M311">Termino at Kundisyon</string>
     <string name="P462">Mag-imbita ng kaibigan</string>
+    <string name="P467">Hindi naka-install ang app na ito, paki-install ito bago ito gamitin</string>
 
 </resources>
 
