--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1751,5 +1751,6 @@
     <string name="J533">cài đặt thành công</string>
     <string name="M311">Điều Khoản &amp; Điều Kiện</string>
     <string name="P462">Mời bạn bè</string>
+    <string name="P467">Chưa cài đặt ứng dụng, hãy cài đặt trước</string>
 
 </resources>
