--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1806,4 +1806,5 @@
     <string name="J533">设置成功</string>
     <string name="M311">规则与条款</string>
     <string name="P462">邀请好友</string>
+    <string name="P467">未安装此应用，请安装后再使用。</string>
 </resources>
