--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1881,4 +1881,5 @@
     <string name="max">Max</string>
     <string name="M311">Terms &amp; Conditions</string>
     <string name="P462">Referral Friends</string>
+    <string name="P467">This app is not installed, please install it before using it</string>
 </resources>
