注册成功提示修改英文翻译

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1644,7 +1644,7 @@
     <string name="P234">Email Us</string>
     <string name="P196">Under review</string>
     <string name="P235">Set Phone Number Get %s</string>
-    <string name="P236">Thank you for registering with us.</string>
+    <string name="P236">Welcome to OKBet! To fully enjoy our platform, please complete your KYC process. Verify your identity in the KYC section to access all services and exclusive offers. Thank you!</string>
     <string name="P237">You have received %s as a welcome gift!</string>
     <string name="P231">We will send an OTP verification code to your mobile number:</string>
     <string name="P239">New withdraw password</string>
