增加facebook授权错误提示翻译

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1722,6 +1722,7 @@
     <string name="P454">Matagumpay na natanggap</string>
     <string name="J533">Successfully set</string>
     <string name="M311">Termino at Kundisyon</string>
+    <string name="P472">Pansamantalang hindi available ang pag-log in sa Facebook, mangyaring gamitin ang iyong mobile number para magparehistro/mag-login</string>
 
 </resources>
 
