--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1880,5 +1880,6 @@
     <string name="J533">Setting successful</string>
     <string name="max">Max</string>
     <string name="M311">Terms &amp; Conditions</string>
+    <string name="P472">Facebook service is not available, please register/ login with your mobile number</string>
 
 </resources>
