--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1750,5 +1750,6 @@
     <string name="P454">Nhận thành công</string>
     <string name="J533">cài đặt thành công</string>
     <string name="M311">Điều Khoản &amp; Điều Kiện</string>
+    <string name="P472">Hiện không thể sử dụng Facebook đăg nhập, hãy sử dụng số điện thoại để Đăng ký/Đăng nhập</string>
 
 </resources>
