--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1814,4 +1814,5 @@
     <string name="P462">邀请好友</string>
     <string name="P467">未安装此应用，请安装后再使用。</string>
     <string name="P472">Facebook登录暂时无法使用，请使用手机号码注册/登陆</string>
+    <string name="P487">新游戏</string>
 </resources>
