--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1759,5 +1759,6 @@
     <string name="P462">Mời bạn bè</string>
     <string name="P467">Chưa cài đặt ứng dụng, hãy cài đặt trước</string>
     <string name="P472">Hiện không thể sử dụng Facebook đăg nhập, hãy sử dụng số điện thoại để Đăng ký/Đăng nhập</string>
+    <string name="P487">Bagong laro</string>
 
 </resources>
