--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1891,4 +1891,5 @@
     <string name="P462">Referral Friends</string>
     <string name="P467">This app is not installed, please install it before using it</string>
     <string name="P487">New Game</string>
+    <string name="P489">Hot Game</string>
 </resources>
