--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1890,4 +1890,5 @@
 
     <string name="P462">Referral Friends</string>
     <string name="P467">This app is not installed, please install it before using it</string>
+    <string name="P491">Back of ID</string>
 </resources>
