--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1731,6 +1731,7 @@
     <string name="P462">Mag-imbita ng kaibigan</string>
     <string name="P467">Hindi naka-install ang app na ito, paki-install ito bago ito gamitin</string>
     <string name="P472">Pansamantalang hindi available ang pag-log in sa Facebook, mangyaring gamitin ang iyong mobile number para magparehistro/mag-login</string>
+    <string name="P466">Pakilagay ang iyong Email</string>
 
 </resources>
 
