--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1891,4 +1891,5 @@
     <string name="P462">Referral Friends</string>
     <string name="P467">This app is not installed, please install it before using it</string>
     <string name="P491">Back of ID</string>
+    <string name="P492_1">The file size should be under 500KB.</string>
 </resources>
